--- a/site/index.html
+++ b/site/index.html
@@ -4,13 +4,13 @@
 	    <meta charset="UTF-8">
 	    <title> Nombre à trouver </title>
 	    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="styleshett" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCswP0p/We" crossorigin="anonymous">
-	    <link href="/CSS/jeu_nb.css" rel="stylesheet">
+	    <link href="CSS/jeu_nb.css" rel="stylesheet">
 </head>
 
 <body>
 	    <h1 id="titre"></h1>                                               
 	    <div id="explications" class="mx-auto" style="width: 600px"></div>
 	    <button class="btn btn-primary"> Jouer </button>
-	    <script src="/JavaScript/jeu_nb.js"></script>        
+	    <script src="JavaScript/jeu_nb.js"></script>        
 </body>            
 </html>
